@@ -26,15 +26,15 @@ is( $decode1->{conditionstext},    'Fair', 'decoded conditions in text' );
 is( $decode1->{day},               '25',   'decoded day' );
 is( $decode1->{dewpoint_c},        25,     'decoded dewpoint Celius' );
 is( $decode1->{dewpoint_f},        77,     'decoded dewpoint Fahrenheit' );
-is( $decode1->{heat_index_c},      30,     'decoded heat index Celius' );
-is( $decode1->{heat_index_f},      85,     'decoded heat index Fahrenheit' );
+is( $decode1->{heat_index_c},      31,     'decoded heat index Celius' );
+is( $decode1->{heat_index_f},      87,     'decoded heat index Fahrenheit' );
 is( $decode1->{obs},               $obs1,  'obs matched original' );
 is( $decode1->{pressure_mb},       1010,   'decoded pressure mb' );
-is( $decode1->{pressure_mmhg},     757,    'decoded pressure mm Hg' );
-is( $decode1->{relative_humidity}, 88,     'decoded relative humidity' );
+is( $decode1->{pressure_mmhg},     758,    'decoded pressure mm Hg' );
+is( $decode1->{relative_humidity}, 89,     'decoded relative humidity' );
 is( $decode1->{station_type},  'Manual', 'decoded station type' );
 is( $decode1->{temperature_c}, 27,       'decoded temperature Celius' );
-is( $decode1->{temperature_f}, 80,       'decoded temperature Fahrenheit' );
+is( $decode1->{temperature_f}, 81,       'decoded temperature Fahrenheit' );
 is( $decode1->{time},          '1200',   'decoded time' );
 is( $decode1->{windchill_c},   undef,       'decoded windchill Celius' );
 is( $decode1->{windchill_f},   undef,       'decoded windchill Fahrenheit' );
@@ -75,13 +75,13 @@ is( $decode2->{code},                   'KSTL',   'decoded code (station)' );
 is( $decode2->{conditionstext},     'Fair', 'decoded conditions in text' );
 is( $decode2->{day},                '10',   'decoded day' );
 is( $decode2->{dewpoint_c},         16,     'decoded dewpoint Celius' );
-is( $decode2->{dewpoint_f},         60,     'decoded dewpoint Fahrenheit' );
+is( $decode2->{dewpoint_f},         61,     'decoded dewpoint Fahrenheit' );
 is( $decode2->{heat_index_c},       25,     'decoded heat index Celius' );
 is( $decode2->{heat_index_f},       77,     'decoded heat index Fahrenheit' );
 is( $decode2->{obs},                $obs2,  'obs matched original' );
-is( $decode2->{pressure_mb},        1012,   'decoded pressure mb' );
-is( $decode2->{pressure_mmhg},      759,    'decoded pressure mm Hg' );
-is( $decode2->{relative_humidity},  60,     'decoded relative humidity' );
+is( $decode2->{pressure_mb},        1013,   'decoded pressure mb' );
+is( $decode2->{pressure_mmhg},      760,    'decoded pressure mm Hg' );
+is( $decode2->{relative_humidity},  61,     'decoded relative humidity' );
 is( $decode2->{remark_arrayref}[0], 'RMK',  'decoded remark 1' );
 is( $decode2->{remark_arrayref}[1], 'AO2',  'decoded remark 2' );
 is( $decode2->{remark_arrayref}[2], '1011.5',    'decoded remark 3' );
